[gd_scene load_steps=4 format=3 uid="uid://clobby00001"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_lobby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.35, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.2, 0.2, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.55, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_selected"]
bg_color = Color(0.6, 0.15, 0.15, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.9, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="HeaderBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="HeaderLabel" type="Label" parent="HeaderBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 32
text = "PRE-GAME LOBBY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="HeaderBar"]
layout_mode = 1
offset_left = 10.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 18
text = "< BACK"

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 90.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="ModeSection" type="PanelContainer" parent="MainContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="ModeVBox" type="VBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ModeHeader" type="MarginContainer" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection/ModeVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="ModeLabel" type="Label" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection/ModeVBox/ModeHeader"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "GAME MODE"

[node name="ModeButtons" type="MarginContainer" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection/ModeVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection/ModeVBox/ModeButtons"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SurvivalBtn" type="Button" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection/ModeVBox/ModeButtons/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_selected")
text = "SURVIVAL
(Arcade Waves)"

[node name="ExclusionBtn" type="Button" parent="MainContainer/ScrollContainer/VBoxContainer/ModeSection/ModeVBox/ModeButtons/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "EXCLUSION ZONE
(Sandbox)"

[node name="MapSection" type="PanelContainer" parent="MainContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MapVBox" type="VBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MapHeader" type="MarginContainer" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection/MapVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="MapLabel" type="Label" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection/MapVBox/MapHeader"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "SELECT MAP"

[node name="MapButtons" type="MarginContainer" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection/MapVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection/MapVBox/MapButtons"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RustBtn" type="Button" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection/MapVBox/MapButtons/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_selected")
text = "RUST
Oil Yard - Desert Combat Arena"

[node name="HometownBtn" type="Button" parent="MainContainer/ScrollContainer/VBoxContainer/MapSection/MapVBox/MapButtons/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "YOUR HOMETOWN
GPS Real-World Map (Requires Location)"

[node name="FriendsSection" type="PanelContainer" parent="MainContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="FriendsVBox" type="VBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FriendsHeader" type="MarginContainer" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox/FriendsHeader"]
layout_mode = 2

[node name="FriendsLabel" type="Label" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox/FriendsHeader/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 22
text = "PARTY"

[node name="InviteBtn" type="Button" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox/FriendsHeader/HBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "+ INVITE"

[node name="FriendsContent" type="MarginContainer" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="PartyList" type="VBoxContainer" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox/FriendsContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="YouLabel" type="Label" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox/FriendsContent/PartyList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "â˜… You (Host)"

[node name="EmptyLabel" type="Label" parent="MainContainer/ScrollContainer/VBoxContainer/FriendsSection/FriendsVBox/FriendsContent/PartyList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "No friends in party. Invite friends to play together!"

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="StartButton" type="Button" parent="BottomBar/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_selected")
text = "START GAME"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -25.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Select mode and map to begin"
horizontal_alignment = 1
